<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".BmiCalculatorActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/tvWelcome"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name"/>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Your Weight"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/tvWeight"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/etWeight"
        app:layout_constraintTop_toTopOf="@id/etWeight"
        app:layout_constraintBottom_toBottomOf="@id/etWeight"/>

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvWeight"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Your Height"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/tvHeight"
        app:layout_constraintTop_toBottomOf="@id/etWeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Meter"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/etHeight"
        app:layout_constraintTop_toTopOf="@id/etHeight"
        app:layout_constraintBottom_toBottomOf="@id/etHeight"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeight"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvWeightStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tvStatus"
        app:layout_constraintTop_toBottomOf="@id/etHeight"
        tools:text="Body Weight" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>